--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "gatsby": "^2.0.0"
     },
     "scripts": {
+        "prepare": "npm run build",
         "build": "babel src --out-dir . ",
         "watch": "babel -w src --out-dir . "
     }
