--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "gatsby-plugin-canonical-urls",
+    "name": "@c0b41/gatsby-plugin-canonical-urls",
     "description": "Add canonical links to HTML pages Gatsby generates.",
     "version": "1.0.0",
     "dependencies": {
@@ -18,7 +18,7 @@
         "gatsby": "^2.0.0"
     },
     "scripts": {
-        "prepare": "npm run build",
+        "prepare": "cross-env NODE_ENV=production npm run build",
         "build": "babel src --out-dir . ",
         "watch": "babel -w src --out-dir . "
     }
